[gd_scene load_steps=2 format=3 uid="uid://cv7ep50urhw5p"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_usns1"]

[node name="Menu" type="Control" groups=["menu"]]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_usns1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -50.5
offset_right = 65.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(65, 48.5)

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Levels" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Levels"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to Desktop"

[node name="notimplementedyet" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "not implemented yet :)"

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
